郵便番号の戻りエラーを解消

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -63,7 +63,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</header>
 
 	<main id="main" class="mainpage">
-		<div class="first" id="first">
+		<!-- <div class="first" id="first">
 			<div class="first-question">
 				<span></span>
 				<p>タクシー会社での勤務経験はありますか？</p>
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="second" id="second">
 			<div class="second-head">
 				<div class="step-text">
@@ -417,7 +417,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</span>
 				</div>
 			</div>
-			<div class="common-title">
+			<!-- <div class="common-title">
 				<span></span>
 				<p>お住まいの地域を教えてください</p>
 				<span class="required-tag">必須</span>
@@ -431,7 +431,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="option-one bg-white" id="sixArea3" data-index="3" data-value="埼⽟県" onclick="sixAreaClick(this)">埼⽟県</div>
 				<div class="option-one bg-white" id="sixArea4" data-index="4" data-value="千葉県" onclick="sixAreaClick(this)">千葉県</div>
 				<div class="option-one bg-white" id="sixArea5" data-index="5" data-value="その他の地域" onclick="sixAreaClick(this)">その他の地域</div>
-			</div>
+			</div> -->
 			<!-- <div class="common-description-six">
 				<div class="common-img">
 					<img src="./assets/img/man.png" alt="">
@@ -449,6 +449,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<span class="required-tag">必須</span>
 			</div>
 			<div class="sixth-one border-b">
+				<div class="next-img-six">
+					<img src="./assets/img/arrow-left.webp" alt="">
+				</div>
 				<div class="option-one bg-white" id="sixWay1" data-index="1" data-value="電車" onclick="sixWayClick(this)">電車</div>
 				<div class="option-one bg-white" id="sixWay2" data-index="2" data-value="バス" onclick="sixWayClick(this)">バス</div>
 				<div class="option-one bg-white" id="sixWay3" data-index="3" data-value="自家用車" onclick="sixWayClick(this)">自家用車</div>
