転職支援サービスのフォームを修正

--- a/registration/index.html
+++ b/registration/index.html
@@ -172,7 +172,16 @@
             </figure>
           </article>
         </section>
-        <section class="registration-form">
+
+        <script src="https://sdk.form.run/js/v2/embed.js"></script>
+        <div
+          class="formrun-embed"
+          data-formrun-form="@taxi-mate-stepform"
+          data-formrun-redirect="true">
+        </div>
+
+
+        <!-- <section class="registration-form">
           <form
             action="../registration.php"
             method="GET"
@@ -531,7 +540,6 @@
                     <input
                       type="text"
                       name="firstname"
-                      onchange="getFirstname()"
                       id="firstname"
                       class="form-control"
                       placeholder="山田"
@@ -656,7 +664,7 @@
               </div>
             </div>
           </form>
-        </section>
+        </section> -->
         <section class="page_link_02">
           <div class="title">
             <p>
