registrarionページを廃止して全てlp-1にリンクを集約

--- a/contact/thanks/index.html
+++ b/contact/thanks/index.html
@@ -62,7 +62,7 @@
 						<a href="../../contact/" class="button b_mail">
 							<span>メールで求人を受け取る</span>
 						</a>
-						<a href="../../registration/" class="button b_service">
+						<a href="../../lp-1/" class="button b_service" target="_blank">
 							<span>転職支援サービスに登録</span>
 						</a>
 						<a href="tel:0120-935-196" class="button b_tel">
@@ -93,7 +93,7 @@
 						<a href="../../job/">求人一覧</a>
 					</li>
 					<li>
-						<a href="../../registration/" class="button b_service">
+						<a href="../../lp-1/" class="button b_service" target="_blank">
 							＼転職スピードNo.1／
 							<span>
 								転職支援サービスに登録(無料)
@@ -162,7 +162,7 @@
 				<a href="../../contact/">
 					メールで求人を受け取る
 				</a>
-				<a href="../../registration/">
+				<a href="../../lp-1/" target="_blank">
 					転職支援サービスに登録
 				</a>
 			</li>
