--- a/contact/index.html
+++ b/contact/index.html
@@ -90,7 +90,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <a href="../contact/" class="button b_mail">
               <span>メールで求人を受け取る</span>
             </a>
-            <a href="../registration/" class="button b_service">
+            <a href="../lp-1/" class="button b_service" target="_blank">
               <span>転職支援サービスに登録</span>
             </a>
             <a href="tel:0120-935-196" class="button b_tel">
@@ -120,7 +120,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <a href="../job/">求人一覧</a>
           </li>
           <li>
-            <a href="../registration/" class="button b_service">
+            <a href="../lp-1/" class="button b_service" target="_blank">
               ＼転職スピードNo.1／
               <span> 転職支援サービスに登録(無料) </span>
             </a>
@@ -284,7 +284,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <h2>無料で転職支援サービスに登録する</h2>
               <p>タクシー業界を知り尽くしたアドバイザーが転職を支援します</p>
             </div>
-            <a href="../registration/" class="button b_service">
+            <a href="../lp-1/" class="button b_service" target="_blank">
               ＼転職スピードNo.1／
               <span> 転職支援サービスに登録(無料) </span>
             </a>
@@ -344,7 +344,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </li>
       <li>
         <a href="../contact/"> メールで求人を受け取る </a>
-        <a href="../registration/"> 転職支援サービスに登録 </a>
+        <a href="../lp-1/" target="_blank"> 転職支援サービスに登録 </a>
       </li>
       <li>
         <a href="https://anytrail.jp/" target="_blank"> 運営会社 </a>
