【破壊的変更】就業状況という質問項目を追加した

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -207,46 +207,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 			<div class="common-title">
 				<span></span>
-				<p>考えている転職時期を教えてください</p>
+				<p>現在の就業状況を教えてください</p>
 			</div>
 
 			<div class="third-five-part">
 				<div class="third-one">
-					<div class="third-cycle bg-white" id="plane" data-index="1" data-value="直ぐにでも" onclick="thirdCheck(this)">
-						<div class="third-img">
-							<img src="./assets/img/plane.webp" alt="">
-						</div>
-						<span class="third-span" id="plane-content">直ぐにでも</span>
+					<div class="third-cycle bg-white" data-index="1" data-value="退職済み" onclick="thirdCheck(this)">
+						<span class="third-span">退職済み</span>
 					</div>
-					<div class="third-cycle bg-white" id="train" data-index="2" data-value="来月あたり" onclick="thirdCheck(this)">
-						<div class="third-img">
-							<img src="./assets/img/train.webp" alt="">
-						</div>
-						<span class="third-span" id="train-content">来月あたり</span>
+					<div class="third-cycle bg-white" data-index="2" data-value="今月中に退職" onclick="thirdCheck(this)">
+						<span class="third-span">今月中に退職</span>
+					</div>
+					<div class="third-cycle bg-white" data-index="3" data-value="来月以降で退職" onclick="thirdCheck(this)">
+						<span class="third-span">来月以降で退職</span>
+					</div>
+					<div class="third-cycle bg-white" data-index="4" data-value="退職日は未定" onclick="thirdCheck(this)">
+						<span class="third-span">退職日は未定</span>
+					</div>
+					<div class="third-cycle bg-white" data-index="5" data-value="退職はまだ考えていない" onclick="thirdCheck(this)">
+						<span class="third-span">退職はまだ考えていない</span>
 					</div>
 					<div class="next-img-third">
 						<img src="./assets/img/arrow-left.webp" alt="">
 					</div>
-				</div>
-				<div class="third-two">
-					<div class="third-cycle bg-white" id="bus" data-index="3" data-value="3ヶ月以内" onclick="thirdCheck(this)">
-						<div class="third-img">
-							<img src="./assets/img/bus.webp" alt="">
-						</div>
-						<span class="third-span" id="bus-content">3ヶ月以内</span>
-					</div>
-					<div class="third-cycle bg-white" id="bike" data-index="4" data-value="半年以内" onclick="thirdCheck(this)">
-						<div class="third-img">
-							<img src="./assets/img/bike.webp" alt="">
-						</div>
-						<span class="third-span" id="bike-content">半年以内</span>
-					</div>
-				</div>
-				<div class="third-three bg-white" id="rickshaw" data-index="5" data-value="時期未定" onclick="thirdCheck(this)">
-					<div class="third-img">
-						<img src="./assets/img/think.webp" alt="">
-					</div>
-					<span class="third-span" id="rickshaw-content">時期未定</span>
 				</div>
 			</div>
 			<div class="next-third">
