サンクスページのリンクを電話番号ではなく日程調整に変更

--- a/lp-1/thanks/index.html
+++ b/lp-1/thanks/index.html
@@ -160,34 +160,41 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="thanks">
         <p>
-            ご登録ありがとうございました。<br>こちらから求人一覧が確認できます↓
-        </p>
-        <div class="link">
-            <a href="https://taxi-mate.notion.site/47bf3e9b274344f696befd5af5a7d340?v=97955df816b54ab38f982219917f7428" class="button b_job">
-                ＼月給45万円が目指せる求人を厳選／
-                <span>
-                    おすすめ求人を見る
-                </span>
-            </a>
-        </div>
-        <br>
-
-        <p>
-            また、タクシーメイトでは転職を成功させるためにお電話での相談を行っております。<br>
+            タクシーメイトでは転職を成功させるためにお電話での相談を行っております。<br>
             <span class="tel green-marker">
                 <span class="material-icons original-icon">
                     phone_in_talk
                 </span>
             0120-935-196
             </span>
-            の番号よりお電話いたします。こちらの番号を「<span class="green-marker">タクシーメイト</span>」で登録ください。<br>
-            <br>
-            <span class="small thin">折り返しお電話時間（営業時間）<br><span class="marker-light-green">平日</span>10:00〜19:00
-            </span>
+            よりお電話いたします。<br>↓下記よりお電話可能な日程をお選びください↓<br>
+            <div class="link">
+                <a href="https://meetings.hubspot.com/yamaura1/call" class="button b_job" style="background: rgb(255, 143, 115);" target="_blank">
+                    ＼無料で転職支援をサポート／
+                    <span>
+                        お電話可能な日程を選ぶ
+                    </span>
+                </a>
+            </div>
         </p>
         <br>
-        <br>
 
+        <p>
+            ↓こちらから求人一覧が確認できます↓
+        </p>
+        <div class="link">
+            <a href="https://taxi-mate.notion.site/47bf3e9b274344f696befd5af5a7d340?v=97955df816b54ab38f982219917f7428" class="button b_job" target="_blank">
+                ＼月給45万円が目指せる求人を厳選／
+                <span>
+                    おすすめ求人を見る
+                </span>
+            </a>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <p>↓急ぎで相談したい場合は下記までお電話ください↓</p>
         <div class="link">
             <a href="tel:0120-935-196" class="button b_tel">
                 ＼最短で面談！このまま電話で転職相談する／
