--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -206,6 +206,18 @@
           </div>
         </div>
 
+        <div class="common-description mt-30 mb-30">
+          <div class="common-img">
+            <img src="./assets/img/stuff.webp" alt="" />
+          </div>
+          <div class="common-des">
+            <div class="description-triangle"></div>
+            <div class="description-text padding-5-7">
+              タクシーメイトは無料の転職支援サービスです。転職に成功した多くの方がご登録しています。
+            </div>
+          </div>
+        </div>
+
         <div class="next">
           <!-- <span
             class="next-button first-child"
@@ -290,7 +302,7 @@
           <div class="common-des">
             <div class="description-triangle"></div>
             <div class="description-text padding-5-7">
-              タクシーメイトは無料の転職支援サービスです。転職に成功した多くの方がご登録しています。
+              普通免許取得後3年以上経過している方は、応募可能な求人が多くなります。
             </div>
           </div>
         </div>
@@ -369,16 +381,19 @@
             >
               <span class="third-span">退職日は未定</span>
             </div>
-            <div
-              class="third-cycle bg-white"
-              data-index="5"
-              data-value="退職はまだ考えていない"
-              onclick="ChangingJobsTimeClick(this)"
-            >
-              <span class="third-span">退職はまだ考えていない</span>
-            </div>
             <div id="nextImgThird" class="next-img-third">
               <img src="./assets/img/arrow-left.webp" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="common-description mt-30 mb-30">
+          <div class="common-img">
+            <img src="./assets/img/stuff.webp" alt="" />
+          </div>
+          <div class="common-des">
+            <div class="description-triangle"></div>
+            <div class="description-text padding-5-7">
+              あなたにぴったりな転職先のご提案をさせていただきます。面接対策も実施しています。
             </div>
           </div>
         </div>
