テクシーの誤表記をタクシーに修正

--- a/job/index.html
+++ b/job/index.html
@@ -293,7 +293,7 @@
 		<section class="page_link_02">
 			<div class="title">
 				<p>
-					どんなテクシー会社があるのかの質問だけでも構いません<br>
+					どんなタクシー会社があるのかの質問だけでも構いません<br>
 					まずはお気軽にお問い合わせください
 				</p>
 				<h2>
