--- a/registration/index.html
+++ b/registration/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta
@@ -30,10 +30,13 @@
     <!-- End Google Tag Manager -->
 
     <!-- SNS -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="タクシーメイト">
-    <meta property="og:description" content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
-    <meta property="og:image" content="/images/ogimage.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="タクシーメイト" />
+    <meta
+      property="og:description"
+      content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。"
+    />
+    <meta property="og:image" content="/images/ogimage.png" />
     <!-- SNS END -->
 
     <link
@@ -64,10 +67,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0"
     />
-    <link rel="canonical" href="https://taxi-mate.jp/registration/">
-</head>
+    <link rel="canonical" href="https://taxi-mate.jp/registration/" />
+  </head>
 
-<body>
+  <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
@@ -177,9 +180,8 @@
         <div
           class="formrun-embed"
           data-formrun-form="@taxi-mate-stepform"
-          data-formrun-redirect="true">
-        </div>
-
+          data-formrun-redirect="true"
+        ></div>
 
         <!-- <section class="registration-form">
           <form
@@ -668,7 +670,7 @@
         <section class="page_link_02">
           <div class="title">
             <p>
-              どんなテクシー会社があるのかの質問だけでも構いません<br />
+              どんなタクシー会社があるのかの質問だけでも構いません<br />
               まずはお気軽にお問い合わせください
             </p>
             <h2>さあ、今すぐドライバーになろう</h2>
@@ -752,5 +754,5 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src="../js/registration.js"></script>
-</body>
+  </body>
 </html>
